--- a/deployment/Vagrantfile
+++ b/deployment/Vagrantfile
@@ -5,25 +5,25 @@ Vagrant.configure("2") do |config|
         ansible.vm.hostname="controlleransible"
         ansible.vm.network "private_network", ip: "192.168.56.10"
         ansible.vm.provision "file",
-            source: "./keys/rasp0_1"
+            source: "./keys/rasp0_1",
             destination: "/home/vagrant/keys/rasp0_1"
         ansible.vm.provision "file",
-            source: "./keys/rasp4_1"
+            source: "./keys/rasp4_1",
             destination: "/home/vagrant/keys/rasp4_1"
         ansible.vm.provision "file",
-            source: "./ansible.cfg"
+            source: "./ansible.cfg",
             destination: "/home/vagrant/ansible.cfg"
         ansible.vm.provision "file",
-            source: "./inventaire"
+            source: "./inventaire",
             destination: "/home/vagrant/inventaire"
         ansible.vm.provision "file",
-            source: "./play_installpython.yaml"
+            source: "./play_installpython.yaml",
             destination: "/home/vagrant/play_installpython.yaml"
         ansible.vm.provision "file",
-            source: "./play_changemotd.yaml"
+            source: "./play_changemotd.yaml",
             destination: "/home/vagrant/play_changemotd.yaml"
         ansible.vm.provision "file",
-            source: "./install.sh"
+            source: "./install.sh",
             destination: "/home/vagrant/install.sh"
         ansible.vm.provision "shell", inline: <<-SHELL
             apt update -y
@@ -33,7 +33,9 @@ Vagrant.configure("2") do |config|
             apt install -y vim wget curl python3-pip
             pip3 install ansible
             apt install figlet -y
+            chmod +x /home/vagrant/install.sh
         SHELL
+    
 
     end
 end
