--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ openai
 #opencv-python
 tensorflow
 keras
-imageAI 
+imageai==2.1.6
 torch
 torchvision
 pillow
@@ -19,3 +19,4 @@ opencv-contrib-python
 #os
 Flask
 Flask-WTF
+pygobject
